@@ -4277,6 +4277,10 @@ v0.33.19        26-Oct-2001
 		The AREADEF lines in golded.inc now contain the aka to use
 		instead of a dot.
 		Fixes for Sparc systems.
+		Now logs in the normal system logfile.
+		On new systems it will now also create one filearea, three
+		default mail areas, a newfilereport and the groups belonging
+		to these areas. Also 10 oneliners are installed.
 
 	mbsebbs:
 		Added menu 317, change FS editor shortcut keys to (Emacs/
